syntax = "proto3";

package post;

option go_package="/post";

message Post {
  int64  id      = 1;
  string title   = 2;
  string content = 3;
}

message ListPostsRequest {
  int64 page      = 1;
  int64 page_size = 2;
}

message ListPostsResponse {
  repeated Post posts = 1;
}

message CreatePostRequest {
  string title   = 1;
  string content = 2;
}

message CreatePostResponse {
  Post post = 1;
}

service PostService {
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse){}
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse){}
}